<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeBookFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_book" />
    <item
        android:id="@+id/ticketsListFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_tickets" />
    <item
        android:id="@+id/timetableFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_timetable" />
    <item
        android:id="@+id/alertsFragment"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_account" />
</menu>
